[package]
name = "tfhe_rnns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# concrete = { version = "0.2.0-beta", features = [ "booleans", "shortints", "integers", "serde"] }
concrete-core = {version = "=1.0.2", features=["backend_default", "backend_cuda", "backend_default_parallel", "backend_default_serialization"]}
bincode = "1.3.3"
colored = "2.0.0"

# [profile.release]
# debug = true