[package]
name = "tfhe_rnns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# concrete = { version = "0.2.0-beta", features = [ "booleans", "shortints", "integers", "serde"] }
# concrete-core = {version = "=1.0.2", features=["backend_default", "backend_cuda", "backend_default_parallel", "backend_default_serialization"]}
concrete-core = {git = "https://github.com/zama-ai/concrete-core.git", features=["x86_64-cuda"]}
# 
# concrete-core = {path = "concrete-core/concrete-core", features=["x86_64-cuda"]}

bincode = "1.3.3"
colored = "2.0.0"
lazy_static = "1.4.0"
ndarray = {version="0.15.6", features = ["std", "serde", "rayon"]}
npyz = {version = "0.7.3", features = ["derive", "npz"]}
num = "0.4.0"
hdf5 = "0.8.1"
time-graph = {version="0.3.0", features = ["json", "table"]}
ndarray-stats = "0.5.1"

# [profile.release]
# debug = true