[package]
name = "tfhe_rnns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# concrete = { version = "0.2.0-beta", features = [ "booleans", "shortints", "integers", "serde"] }
# concrete-core = {version = "1.0.2", features=["x86_64-cuda"]}
# concrete-core = {git = "https://github.com/zama-ai/concrete-core.git", rev="f81ecd4", features=["x86_64-cuda"]} # WORKS
# concrete-core = {git = "https://github.com/zama-ai/concrete-core.git", branch="cuda/fix_buffer_size_type", features=["x86_64-cuda"]} # DOES NOT WORK
# 
concrete-core = {path = "concrete-core/concrete-core", features=["x86_64-cuda"]}

bincode = "1.3.3"
colored = "2.0.0"
lazy_static = "1.4.0"
ndarray = {version="0.15.6", features = ["std", "serde", "rayon"]}
npyz = {version = "0.7.3", features = ["derive", "npz"]}
num = "0.4.0"
hdf5 = "0.8.1"
time-graph = {version="0.3.0", features = ["json", "table"]}
ndarray-stats = "0.5.1"
ndarray-npy = "0.8.1"
indicatif = {version="0.17.3", features = ["rayon"]}
rayon = "1.7.0"

[profile.release]
debug = true